# DTaaS

./: .codecov.yml  .eslintrc  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .sonarcloud.properties  .yamllint.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  README.md  SECURITY.md  STATUS.md  docs.ini  mkdocs-github.yml  mkdocs.yml  sonar-project.properties
.claude/: settings.local.json
.devcontainer/: README.md  workspace-settings.json
.github/: REFERENCES.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.prompts/: code-quality.md  pr-review.md
.qlty/: qlty.toml
cli/: DEVELOPER.md  DTaaS-CLI-Design.md  README.md  dtaas.toml  pyproject.toml  users.local.yml  users.server.secure.yml  users.server.yml
cli/src/: cmd.py  cmd_aliases.py  cmd_config.py  cmd_deploy_utils.py  cmd_deployment.py  cmd_lifecycle.py  cmd_options.py  cmd_platform.py  cmd_user.py  cmd_user_utils.py  cmd_utils.py
cli/src/pkg/: _deploy_data.py  build.py  cert_update.py  cert_validate.py  certs.py  config.py  config_update.py  config_validate.py  constants.py  deploy.py  deploy_config.py  lifecycle.py  project.py  registry.py  state.py  user_files.py  users.py  users_compose.py  users_lifecycle.py  users_utils.py  utils.py  validators.py
cli/src/templates/: dtaas.toml  users.csv  users.resources.yml  users.server.secure.yml  users.server.yml
cli/tests/: conftest.py  dtaas.test.toml  test_build.py  test_cert_update.py  test_cert_validate.py  test_certs.py  test_cli.py  test_cmd.py  test_cmd_aliases.py  test_cmd_deploy_utils.py  test_cmd_lifecycle.py  test_cmd_user.py  test_cmd_user_utils.py  test_cmd_utils.py  test_config.py  test_config_update.py  test_config_validate.py  test_deploy.py  test_deploy_config.py  test_lifecycle.py  test_project.py  test_registry.py  test_state.py  test_users.py  test_users_compose.py  test_users_lifecycle.py  test_users_utils.py  test_utils.py
cli/tests/data/: compose.users.exp.yml  compose.users.test.yml
client/: .eslintrc  .prettierignore  CHANGELOG-phase2.md  DEVELOPER.md  DOCKER.md  LICENSE.md  LOGGER_API.md  LOGGER_PROMPT.md  PLAN.md  README.md  compose.client.yml  docker-compose.yml  dtaas-workflow-log-2026-03-26.jsonl  env.d.ts  eslint.config.mjs  index.html  jest-playwright.config.ts  jest.config.json  jest.e2e.config.ts  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vite.config.js  vite.config.ts
deploy/: README.md
deploy/services/cli/: .gitignore  DEVELOPER.md  DTaaS-Services-CLI-Design.md  GITLAB_INTEGRATION.md  README.md  build.py  conftest.py  pyproject.toml
deploy/services/cli/dtaas_services/: cmd.py
deploy/services/cli/dtaas_services/commands/: __init__.py  service_ops.py  setup_ops.py  user_ops.py  utility.py
deploy/services/cli/dtaas_services/pkg/: cert.py  config.py  docker_utils.py  formatter.py  influxdb.py  mongodb.py  password_store.py  rabbitmq.py  sanitize.py  service.py  template.py  thingsboard.py  thingsboard_permissions.py  thingsboard_users.py  thingsboard_utility.py  utils.py
deploy/services/cli/dtaas_services/pkg/lib/: __init__.py  cleanup.py  docker_executor.py  initialization.py  manager.py  status.py  utils.py
deploy/services/cli/dtaas_services/pkg/services/: mongodb.py  rabbitmq.py
deploy/services/cli/dtaas_services/pkg/services/gitlab/: __init__.py  _api.py  app_token.py  health.py  password.py  personal_token.py  setup.py  users.py  validators.py
deploy/services/cli/dtaas_services/pkg/services/influxdb/: __init__.py  _utils.py  influxdb.py  user_management.py
deploy/services/cli/dtaas_services/pkg/services/postgres/: __init__.py  postgres.py  status.py  user_management.py
deploy/services/cli/dtaas_services/pkg/services/thingsboard/: __init__.py  activation.py  checker.py  customer_user.py  permissions.py  setup.py  setup_credentials.py  sysadmin.py  sysadmin_util.py  tb_cert.py  tb_utility.py  tenant_admin.py
deploy/services/cli/dtaas_services/templates/: compose.gitlab.yml  compose.services.yml  compose.thingsboard.yml
deploy/services/cli/dtaas_services/templates/config/: credentials.csv.template  gitlab_oauth.json.template  services.env.template
deploy/services/cli/tests/: test_cert.py  test_cmd.py  test_config.py  test_docker_utils.py  test_formatter.py  test_influxdb.py  test_mongodb.py  test_password_store.py  test_rabbitmq.py  test_sanitize.py  test_service.py  test_template.py  test_thingsboard.py  test_thingsboard_permissions.py  test_thingsboard_users.py  test_thingsboard_utility.py  test_utils.py
deploy/services/cli/tests/config/: credentials.csv  services.env
deploy/services/cli/tests/system_tests/: test_services_commands.py
deploy/services/cli/tests/test_commands/: conftest.py  test_cmd.py  test_service_ops.py  test_setup_ops.py  test_user_ops.py  test_utility.py
deploy/services/cli/tests/test_lib/: conftest.py  test_cleanup.py  test_docker_executor.py  test_initialization.py  test_manager.py  test_status.py  test_utils.py
deploy/services/cli/tests/test_services/: conftest.py  test_mongodb.py  test_rabbitmq.py
deploy/services/cli/tests/test_services/test_gitlab/: conftest.py  test_api.py  test_app_token.py  test_health.py  test_password.py  test_personal_token.py  test_setup.py  test_setup_steps.py  test_setup_tokens.py  test_users.py  test_validators.py
deploy/services/cli/tests/test_services/test_influxdb/: __init__.py  test_influxdb.py  test_user_management.py  test_utils.py
deploy/services/cli/tests/test_services/test_postgres/: __init__.py  conftest.py  test_postgres.py  test_status.py  test_user_management.py
deploy/services/cli/tests/test_services/test_thingsboard/: conftest.py  test_activation.py  test_checker.py  test_customer_user.py  test_permissions.py  test_reset_password.py  test_setup.py  test_setup_credentials.py  test_sysadmin.py  test_sysadmin_util.py  test_tb_cert.py  test_tb_utility.py  test_tenant_admin_compose.py  test_tenant_admin_user.py
developer/: DOCKER-ENV.md  README.md  client.built.dockerfile  client.dockerfile  (+4 more)
(+1037 files in other folders)
