[tool.poetry]
name = "dtaas-services"
version = "0.4.0"
description = "DTaaS Platform Services Management CLI"
authors = ["Mohamed Abdulkarim"]
license = "INTO-CPS-Association"
readme = "README.md"
packages = [{include = "dtaas_services"}]
include = [
    { path = "dtaas_services/templates/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.3.2"
python-dotenv = "^1.2.2"
python-on-whales = "^0.81.0"
rich = "^15.0.0"
httpx = "^0.28.1"
python-gitlab = "^8.2.0"
psycopg = {version = "^3.2", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"
pylint = "^4.0.5"
pyright = "^1.1.409"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dtaas-services = "dtaas_services.cmd:services"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers"

[tool.pyright]
include = ["dtaas_services", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
